test/implicitDup21_7.slq
def foo(x:ğ”¹){
	y:=dup(x);
	z:=y; /// error
	if X(dup(z)){
		r:=X(x);
	}else{
		r:=x;
	}
	return r;
}

